# cadmia

./: .gitignore  Display.py  Dockerfile  NetworkConfigInfo.md  TCP.py  client.py  main.py  requirements.txt  start.sh  test.py
.github/workflows/: build.yml
assets/: 2023-chargedup.json  calibration.json  config.json  test.json
cadmia-client/: package-lock.json  package.json
cadmia-core/: .gitignore  CMakeLists.txt
cadmia-core/src/: __init__.py  stream.py
cadmia-core/src/cpp/: main.cpp
src/: __init__.py  calibration.py  network_tables_io.py  pose_estimator.py  stream.py  util.py
